--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -1,17 +1,22 @@
 name: Cypress Tests
-
-on: push
-
+on:
+  push:
+    branches: [ main, master ]
+  pull_request:
+    branches: [ main, master ]
 jobs:
-  cypress-run:
-    runs-on: ubuntu-22.04
+  test:
+    timeout-minutes: 60
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      # Install NPM dependencies, cache them correctly
-      # and run all Cypress tests
-      - name: Cypress run
-        uses: cypress-io/github-action@v6
-        with:
-          build: npm run build
-          start: npm start
+    - uses: actions/checkout@v3
+    - uses: actions/setup-node@v3
+      with:
+        node-version: 18
+    - name: Install dependencies
+      run: npm install
+    
+    - name: Run Cypress tests
+      run: npx cypress test
+    - uses: actions/upload-artifact@v3
+      
