Cypress_Update_YAML_Changes_Update

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -17,6 +17,6 @@ jobs:
       run: npm install
     
     - name: Run Cypress tests
-      run: npx cypress test
+      run: npx cypress run
     - uses: actions/upload-artifact@v3
       
