--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -18,5 +18,8 @@ jobs:
     
     - name: Run Cypress tests
       run: npx cypress run
-    - uses: actions/upload-artifact@v3
+    - uses: cypress-io/github-action@v3
+      with:
+        build: npm run build
+        start: npm start
       
