--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -25,3 +25,12 @@ jobs:
         name: playwright-report
         path: playwright-report/
         retention-days: 30
+
+    - name:  Publish to Github Pages
+      uses:  peaceiris/actions-gh-pages@v3
+      if: always()
+      with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir:  ${{ github.workspace }}/chromium/    
+
+
