Cypress_Config_Changes_Update

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -18,7 +18,24 @@ jobs:
     
     - name: Run Cypress tests
       run: npx cypress run
+    - uses: actions/checkout@v2
+    - uses: cypress-io/github-action@v4
+    - uses: actions/upload-artifact@v2
+      if: failure()
+      with:
+        name: cypress-screenshots
+        path: ./cypress/screenshots
+    - uses: actions/upload-artifact@v2
+      if: always()
+      with:
+        name: cypress-videos
+        path: ./cypress/videos
 
+
+   
+    
+     
+      
        
     
          
